--- a/index.html
+++ b/index.html
@@ -18,6 +18,57 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-
-</body>
+<div class="container">
+        <div class="image-section"></div>
+        <div class="form-section">
+            <header>
+                <img src="logo.svg" alt="Remote.ly logo" class="logo">
+                <p class="company-name">Remote.ly</p>
+                <h1>Make every day 'bring your pet to work' day.</h1>
+                <p class="description">Our award-winning platform lets you take your work on the go, wherever life may lead you. Sign up now to securely connect to clients, no matter where you are.</p>
+            </header>
+            <div class="trial-banner">
+                <p>Try it free for 7 days, with plans starting at $25/month.</p>
+            </div>
+            <form action="#" method="POST">
+                <h2>Your Account</h2>
+                 <div class="form-group">
+                    <label for="username">Username</label>
+                    <input type="text" id="username" name="username" required>
+                    <label for="email">Email Address</label>
+                    <input type="email" id="email" name="email" required>
+                </div>
+                <div class="form-group">
+                    <label for="password">Password</label>
+                    <input type="password" id="password" name="password" required>
+                    <label for="password-confirm">Password (Again)</label>
+                    <input type="password" id="password-confirm" name="password-confirm" required>
+                    <p class="password-hint">Your password must contain at least one uppercase letter, one lowercase letter, and one number.</p>
+                </div>
+                <h2>All About You</h2>
+                <div class="form-group">
+                    <label for="first-name">First Name</label>
+                    <input type="text" id="first-name" name="first-name" required>
+                    <label for="last-name">Last Name</label>
+                    <input type="text" id="last-name" name="last-name" required>
+                </div>
+                <div class="form-group">
+                    <label for="dob">Date of Birth</label>
+                    <input type="date" id="dob" name="dob" required>
+                    <label for="business-type">Business Type</label>
+                    <select id="business-type" name="business-type" required>
+                        <option value="sole-proprietorship">Sole Proprietorship</option>
+                        <option value="partnership">Partnership</option>
+                        <option value="corporation">Corporation</option>
+                    </select>
+                </div>
+                <button type="submit" class="submit-btn">Claim Your Free Trial</button>
+            </form>
+            <footer>
+                <p>By signing up, you agree to our <a href="#">Terms of Service</a> and <a href="#">Privacy Policy</a>.</p>
+            </footer>
+        </div>
+      </div>
+     </body>
+    </html>
 </html>
